# abracadabra-money-liquidation-bot

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  config.yaml  foundry.toml  launch_all.sh  launch_one.sh  remappings.txt
abi/: CauldronLiquidator.json  CauldronV2.json  CauldronV4.json  ERC20.json
config/: agld.env  alcx.env  cvx3pool.env  cvxrencrv.env  cvxtricrypto.env  dep-cvx3pool-v1.env  dep-cvx3pool-v2.env  ftm.env  ftt.env  ohm.env  shib.env  spell.env  sspell.env  stg-usdc.env  stg-usdt.env  wbtc.env  weth.env  xsushi.env  yvcrvib.env  yvcrvsteth.env  yvcvxeth.env  yvdai.env  yvsteth2.env
config.disabled/: abritrum_weth.env  dep-sspell.env  ftt-new.env  lusd.env  yvwethv2.env
config.disabled/config.bsc/: binance:wbnb.env
contracts/: CauldronLiquidator.sol  FTTSwapper.sol  ICurvePool.sol  ISwapperV1.sol
script/: CauldronLiquidator.s.sol
src/: event_streams.rs  lib.rs  liquidation.rs  liquidation_executors.rs  main.rs  rebase.rs  session.rs
src/bindings/: bentoboxv1.rs  cauldronliquidator.rs  cauldronv2.rs  cauldronv4.rs  erc20.rs  mod.rs
