[package]
name = "abra_liquidator"
version = "0.1.0"
edition = "2021"

[lib]
name = "abra_liquidator"
path = "src/lib.rs"

[[bin]]
name = "abra_liquidator"
path = "src/bin/liquidator.rs"

[dependencies]
anyhow = "1.0.62"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
serde_json = "1.0.86"
dotenv = "0.15.0"
logging = "0.1.0"
loggy = "0.5.1"
log = "0.4.17"
rusty-money = { version = "0.4.0", features = ["iso"] }
async-trait = "0.1.57"

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
